# Time_Warp_Rusted

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.package  LICENSE  README.md  SECURITY.md
.github/workflows/: publish-package.yml
Examples/: README.md
Examples/basic/: 01_hello_world.bas  02_variables_and_types.bas  03_math_functions.bas  04_input_output.bas  05_conditionals.bas  06_loops.bas  07_subroutines.bas  08_string_functions.bas  09_arrays.bas  10_turtle_graphics.bas  11_gw_graphics.bas  12_showcase.bas
Examples/c/: 01_hello_world.c  02_variables_types.c  03_printf_formats.c  04_input_scanf.c  05_conditionals.c  06_loops.c  07_functions.c  08_arrays.c  09_calculator.c  10_showcase.c
Examples/demo/: demo_basic.bas  demo_c.c  demo_forth.f  demo_logo.logo  demo_pascal.pas  demo_pilot.pilot  demo_prolog.pl
Examples/forth/: 01_hello_world.f  02_stack_operations.f  03_arithmetic.f  04_word_definitions.f  05_control_flow.f  06_variables.f  07_strings_io.f  08_turtle_graphics.f  09_algorithms.f  10_showcase.f
Examples/logo/: 01_hello_world.logo  02_variables.logo  03_shapes.logo  04_colours.logo  05_procedures.logo  06_spirals.logo  07_recursive_tree.logo  08_filled_art.logo  09_fractals.logo  10_control_flow.logo  11_art_gallery.logo  12_showcase.logo
Examples/pascal/: 01_hello_world.pas  02_variables_types.pas  03_input_output.pas  04_conditionals.pas  05_loops.pas  06_procedures_functions.pas  07_arrays.pas  08_calculator.pas  09_number_theory.pas  10_showcase.pas
Examples/pilot/: 01_hello_world.pilot  02_variables.pilot  03_input_output.pilot  04_pattern_matching.pilot  05_conditionals.pilot  06_loops.pilot  07_subroutines.pilot  08_quiz.pilot  09_strings.pilot  (+1 more)
crates/tw_iot/: Cargo.toml
crates/tw_iot/src/: board.rs  gpio.rs  lib.rs  serial_port.rs
crates/tw_ui/: Cargo.toml
crates/tw_ui/src/: app.rs  canvas.rs  debug_panel.rs  editor.rs  feature_panels.rs  lib.rs  output_panel.rs  themes.rs
docs/: DEBUGGING.md  EXAMPLES.md  FAQ.md  INSTALL.md  KEYBOARD_SHORTCUTS.md  LANGUAGE_GUIDE.md  RASPBERRY_PI.md  THEMES.md  TURTLE_GRAPHICS.md  USER_GUIDE.md
src/: main.rs
tutorials/: 01_getting_started.md  02_basic_tutorial.md  03_logo_tutorial.md  04_pascal_tutorial.md  05_c_tutorial.md  06_forth_tutorial.md  07_pilot_tutorial.md  08_prolog_tutorial.md  09_teachers_guide.md  README.md
(+61 files in other folders)
