[package]
name = "tw_iot"
version = "1.0.0"
edition = "2021"
description = "IoT / Raspberry Pi GPIO abstraction for Time Warp Studio"
license = "MIT"

[dependencies]
log = "0.4"

# GPIO support for Raspberry Pi (Linux ARM only)
# rppal is only available on Linux ARM targets
[target.'cfg(all(target_os = "linux", any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
rppal = { version = "0.19", optional = true }
serialport = { version = "4.5", optional = true }

[features]
default = []
gpio = ["rppal"]
serial = ["serialport"]
raspberry-pi = ["gpio", "serial"]
