[package]
name    = "tw_ui"
version = "1.0.0"
edition = "2021"

[dependencies]
tw_core      = { workspace = true }
tw_graphics  = { workspace = true }
tw_iot       = { workspace = true }
eframe       = { workspace = true }
egui         = { workspace = true }
rfd          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
log          = { workspace = true }
